add slack interactions logger. fix env properties
